k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: innovatech-ingress
  namespace: innovatech
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-despacho
                port:
                  number: 80
          - path: /api/v1/despachos
            pathType: Prefix
            backend:
              service:
                name: despacho-back
                port:
                  number: 8081
          - path: /api/v1/ventas
            pathType: Prefix
            backend:
              service:
                name: ventas-back
                port:
                  number: 8080
